--- a/css/main.css
+++ b/css/main.css
@@ -3231,8 +3231,8 @@ li {
 @media screen and (max-width: 767px) {
   /* card */
   .card {
-    width: 450px;
-    height: 404px;
+    width: 100%;
+    height: 100%;
   }
   .card:not(:last-child) {
     margin-bottom: 30px;
