--- a/sass/components/_second-page-examples.scss
+++ b/sass/components/_second-page-examples.scss
@@ -93,8 +93,8 @@
   /* card */
 
   .card {
-    width: 450px;
-    height: 404px;
+    width: 100%;
+    height: 100%;
 
     &:not(:last-child) {
       margin-bottom: 30px;
